Name:                opengl-api
Version:             0.2
Synopsis:            Parser for the OpenGL spec files.
Description:         Parser for the OpenGL spec files.
License:             BSD3
License-file:        LICENSE
Author:              Vo Minh Thu <noteed@gmail.com>
Maintainer:          Vo Minh Thu <noteed@gmail.com>
Stability:           Provisional
Category:            Graphics
Build-type:          Simple
Extra-source-files:  README.md
Cabal-version:       >=1.6

Source-repository head
  type: git
  location: git://github.com/noteed/opengl-api.git

executable opengl-api
  main-is:             opengl-api.hs

  build-depends:       base >= 4 && < 5,
                       parsec >= 3.1 && < 3.2,
                       cmdargs >= 0.6 && < 0.8

  ghc-options:         -Wall

Library
  Exposed-modules:     Text.OpenGL.Spec,
                       Text.OpenGL.Api,
                       Text.OpenGL.ExtHeader,
                       Text.OpenGL.Checks

  Build-depends:       base >= 4 && < 5,
                       parsec >= 3.1 && < 3.2,
                       containers >= 0.3 && < 0.4

  ghc-options:         -Wall
